Move some content to other class